# PrintColorized

./: LICENSE  README.md  setup.cfg
src/print_colorized/: PrintColorized.py  __init__.py  example.py
src/print_colorized.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
