[metadata]
name = print-colorized
version = 0.0.2
author = Mohammad Hossein Heydarchi
author_email = Heydarchi@yahoo.com
description = A package to print colorized
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Heydarchi/printcolorized
project_urls =
    Bug Tracker = https://github.com/Heydarchi/printcolorized/issues
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src
